--- a/front-end/index.css
+++ b/front-end/index.css
@@ -1,7 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Ephesis&display=swap');
+
+
 div#lista i {
     font-size: 1.5rem;
 }
 
+body input {
+    width: 40%
+}
+
+body header h1.navbar-brand {
+    font-family: 'Ephesis', cursive;
+    font-size: 3rem;
+}
 body {
     background-color: rgb(31, 2, 2);
     color: rgb(255, 255, 255);
